; ModuleID = '/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_snddx.c_SNDDXUpdateAudio.c'
source_filename = "/home/carl/AnghaBench/Provenance/Cores/Yabause/yabause/src/extr_snddx.c_SNDDXUpdateAudio.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@lpDSB2 = common dso_local global i32 0, align 4
@DSBSTATUS_BUFFERLOST = common dso_local global i32 0, align 4
@soundoffset = common dso_local global i32 0, align 4
@stereodata16 = common dso_local global i32* null, align 8
@soundbufsize = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SNDDXUpdateAudio(i32* %0, i32* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca i64, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32* %1, i32** %5, align 8
  store i32 %2, i32* %6, align 4
  %12 = load i32, i32* @lpDSB2, align 4
  %13 = call i32 @IDirectSoundBuffer8_GetStatus(i32 %12, i32* %11)
  %14 = load i32, i32* %11, align 4
  %15 = load i32, i32* @DSBSTATUS_BUFFERLOST, align 4
  %16 = and i32 %14, %15
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %18, label %19

18:                                               ; preds = %3
  br label %62

19:                                               ; preds = %3
  %20 = load i32, i32* @lpDSB2, align 4
  %21 = load i32, i32* @soundoffset, align 4
  %22 = load i32, i32* %6, align 4
  %23 = sext i32 %22 to i64
  %24 = mul i64 %23, 4
  %25 = mul i64 %24, 2
  %26 = trunc i64 %25 to i32
  %27 = call i32 @IDirectSoundBuffer8_Lock(i32 %20, i32 %21, i32 %26, i64* %7, i32* %9, i64* %8, i32* %10, i32 0)
  %28 = load i32*, i32** %4, align 8
  %29 = load i32*, i32** %5, align 8
  %30 = load i32*, i32** @stereodata16, align 8
  %31 = load i32, i32* %6, align 4
  %32 = call i32 @ScspConvert32uto16s(i32* %28, i32* %29, i32* %30, i32 %31)
  %33 = load i64, i64* %7, align 8
  %34 = load i32*, i32** @stereodata16, align 8
  %35 = load i32, i32* %9, align 4
  %36 = call i32 @memcpy(i64 %33, i32* %34, i32 %35)
  %37 = load i64, i64* %8, align 8
  %38 = icmp ne i64 %37, 0
  br i1 %38, label %39, label %47

39:                                               ; preds = %19
  %40 = load i64, i64* %8, align 8
  %41 = load i32*, i32** @stereodata16, align 8
  %42 = load i32, i32* %9, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %41, i64 %43
  %45 = load i32, i32* %10, align 4
  %46 = call i32 @memcpy(i64 %40, i32* %44, i32 %45)
  br label %47

47:                                               ; preds = %39, %19
  %48 = load i32, i32* %9, align 4
  %49 = load i32, i32* %10, align 4
  %50 = add nsw i32 %48, %49
  %51 = load i32, i32* @soundoffset, align 4
  %52 = add nsw i32 %51, %50
  store i32 %52, i32* @soundoffset, align 4
  %53 = load i32, i32* @soundbufsize, align 4
  %54 = load i32, i32* @soundoffset, align 4
  %55 = srem i32 %54, %53
  store i32 %55, i32* @soundoffset, align 4
  %56 = load i32, i32* @lpDSB2, align 4
  %57 = load i64, i64* %7, align 8
  %58 = load i32, i32* %9, align 4
  %59 = load i64, i64* %8, align 8
  %60 = load i32, i32* %10, align 4
  %61 = call i32 @IDirectSoundBuffer8_Unlock(i32 %56, i64 %57, i32 %58, i64 %59, i32 %60)
  br label %62

62:                                               ; preds = %47, %18
  ret void
}

declare dso_local i32 @IDirectSoundBuffer8_GetStatus(i32, i32*) #1

declare dso_local i32 @IDirectSoundBuffer8_Lock(i32, i32, i32, i64*, i32*, i64*, i32*, i32) #1

declare dso_local i32 @ScspConvert32uto16s(i32*, i32*, i32*, i32) #1

declare dso_local i32 @memcpy(i64, i32*, i32) #1

declare dso_local i32 @IDirectSoundBuffer8_Unlock(i32, i64, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
